--- a/veni.css
+++ b/veni.css
@@ -105,7 +105,7 @@ section h3{
 footer{
     padding: 30px 0;
     background-color:lightpink(31, 224, 144);
-    color: floralwhite;
+    color: peachpuff;
     text-align: center;
 }
 .label{
