--- a/veni.css
+++ b/veni.css
@@ -4,7 +4,7 @@
     font-family: monospace;
 }
 a{
-    color: rgb(106, 90, 205);
+    color: inherit;
     text-decoration: none;
 }
 .medsos{
@@ -41,11 +41,11 @@ header ul li a {
     display: inline-block;
 }
 header ul li a:hover {
-    background-color:light pink(76, 0, 255, 0.87);
+    background-color:rgb(72, 61, 139);
     color: ivory;
 }
 .active{
-    background-color:lightpink(76, 0, 255, 0.87);
+    background-color:rgb(72, 61, 139);
     color: ivory;
 }
 .banner{
