--- a/veni.css
+++ b/veni.css
@@ -9,7 +9,7 @@ a{
 }
 .medsos{
     padding:5px 0;
-    background-color: lightpink(29, 206, 206)
+    background-color: Mistyrose;
 }
 .medsos ul li {
     display: inline-block;
@@ -41,11 +41,11 @@ header ul li a {
     display: inline-block;
 }
 header ul li a:hover {
-    background-color:lightpink(29, 206, 206);
+    background-color: Mistyrose;
     color: rgb(176, 224, 230);
 }
 .active{
-    background-color:lightpink(29, 206, 206);
+    background-color: Mistyrose;
     color: rgb(176, 224, 230);
 }
 .banner{
@@ -89,7 +89,7 @@ table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    color:sienna(249, 96%, 27%);
+    color: HoneyDew;
     border-style: inset;
 }
 section h3{
@@ -104,7 +104,7 @@ section h3{
 }
 footer{
     padding: 30px 0;
-    background-color:lightpink(31, 224, 144);
+    background-color: Mistyrose;
     color: peachpuff;
     text-align: center;
 }
