--- a/veni.css
+++ b/veni.css
@@ -109,7 +109,7 @@ footer{
     text-align: center;
 }
 .label{
-    background-color: palevioletred;
+    background-color: PaleTurquoise;
     color: floralwhite;
 }
 .gallery{
