--- a/veni.css
+++ b/veni.css
@@ -89,7 +89,7 @@ table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    color: HoneyDew;
+    color: SlateGray;
     border-style: inset;
 }
 section h3{
