--- a/veni.css
+++ b/veni.css
@@ -110,7 +110,7 @@ footer{
 }
 .label{
     background-color: PaleTurquoise;
-    color: floralwhite;
+    color: Mistyrose;
 }
 .gallery{
     margin: 5px;
