--- a/veni.css
+++ b/veni.css
@@ -41,11 +41,11 @@ header ul li a {
     display: inline-block;
 }
 header ul li a:hover {
-    background-color: FloralWhite;
+    background-color: White;
     color: rgb(176, 224, 230);
 }
 .active{
-    background-color: FloralWhite;
+    background-color: White;
     color: rgb(176, 224, 230);
 }
 .banner{
@@ -110,7 +110,7 @@ footer{
 }
 .label{
     background-color: PaleTurquoise;
-    color: Mistyrose;
+    color: Orchid;
 }
 .gallery{
     margin: 5px;
